[tool.poetry]
name = "eliyahu-server"
version = "0.1.0"
description = ""
authors = ["Israel Barmack <israel.bar.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.9"
httpx = "^0.28.1"
uvicorn = "^0.34.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
